--- a/vignettes/wsynvignette.Rmd
+++ b/vignettes/wsynvignette.Rmd
@@ -879,6 +879,8 @@ interacting Moran effects.
 stage to demonstrate the tools described so far on real data. We carry out a 
 much simplified version of some of the analyses of @Sheppard_18. 
 
+To be completed later.
+
 <!--DAN: embed the B-C transformed cal fin, PCI, and temp data in the package and 
 document them, then do some analyses here of those data using all our tools so far.-->
 
@@ -962,10 +964,11 @@ Several additional synchrony measures with which `synmat` can construct synchron
 
 ## Clustering
 
-We pass the sync
+To be completed later.
 
 # Analysis of gypsy moth defoliation time series
 
+To be completed later.
 
 # Acknowlegements
 
