--- a/vignettes/wsynvignette_refs.bib
+++ b/vignettes/wsynvignette_refs.bib
@@ -8,10 +8,18 @@ year={2002}}
 @article{Anderson_18,
 author={Anderson, TL and Sheppard, LW and Walter, JA and Levine, TL and Hendricks, SP and White, DS and Reuman DC},
 title={The dependence of synchrony on timescale and geography in freshwater plankton},
-journal={In review},
-volume={},
+journal={Limnology and Oceanography},
+volume={In press},
 pages={},
-year={201x}}
+year={2018}}
+
+@article{Gomez_2009,
+author={Gomez, S and Jensen, P and Arenas, A},
+title={Analysis of community structure in networks of correlated data},
+journal={Physical Review E},
+volume={80},
+pages={016114},
+year={2009}}
 
 @article{Grenfell_01,
 author={Grenfell, BT and Bj{\o}rnstad, ON and Kappey, J},
@@ -36,6 +44,13 @@ pages={467-490},
 title={Spatial synchrony in population dynamics},
 volume={35},
 year={2004}}
+
+@article{Newman_2006,
+author={Newman, MEJ},
+joural={Proceedings of the National Academy of Sciences},
+number={103},
+pages={8577-8582},
+title={Modularity and community structure in networks}}
 
 @article{Prichard_94,
 author={Prichard, D and Theiler, J},
