--- a/vignettes/wsynvignette_refs.bib
+++ b/vignettes/wsynvignette_refs.bib
@@ -50,7 +50,8 @@ author={Newman, MEJ},
 joural={Proceedings of the National Academy of Sciences},
 number={103},
 pages={8577-8582},
-title={Modularity and community structure in networks}}
+title={Modularity and community structure in networks},
+year={2006}}
 
 @article{Prichard_94,
 author={Prichard, D and Theiler, J},
